v1.0.0/modules/schema/pages/class/ExcSK.adoc
= `ExcSK`
:toclevels: 4


+++Slovakian excitation system.  UEL and secondary voltage control are included in this model. When this model is used, there cannot be a separate underexcitation limiter or VAr controller model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcSK`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcSK`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ExcSK {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}































































SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemStabilizerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType1Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OverexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiscontinuousExcitationControlDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UnderexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VoltageCompensatorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}


































ExcSK -> SynchronousMachineDynamics: SynchronousMachineDynamics


ExcSK -> PowerSystemStabilizerDynamics: PowerSystemStabilizerDynamics


ExcSK -> PFVArControllerType1Dynamics: PFVArControllerType1Dynamics


ExcSK -> OverexcitationLimiterDynamics: OverexcitationLimiterDynamics


ExcSK -> DiscontinuousExcitationControlDynamics: DiscontinuousExcitationControlDynamics


ExcSK -> PFVArControllerType2Dynamics: PFVArControllerType2Dynamics


ExcSK -> UnderexcitationLimiterDynamics: UnderexcitationLimiterDynamics


ExcSK -> VoltageCompensatorDynamics: VoltageCompensatorDynamics


ExcSK -> DiagramObject: DiagramObjects


ExcSK -> InstanceSet: InstanceSet


ExcSK -> Name: Names


ExcSK -> ChangeSetMember: PropertiesCIMDataObject


ExcSK -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++

| <<efdmax,`efdmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Field voltage clipping upper level limit (<i>Efdmax</i>) (&gt; ExcSK.efdmin).+++

| <<efdmin,`efdmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Field voltage clipping lower level limit (<i>Efdmin</i>) (&lt; ExcSK.efdmax).+++

| <<emax,`emax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum field voltage output (<i>Emax</i>) (&gt; ExcSK.emin).  Typical value = 20.+++

| <<emin,`emin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum field voltage output (<i>Emin</i>) (&lt; ExcSK.emax).  Typical value = -20.+++

| <<k,`k`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i>).  Typical value = 1.+++

| <<k1,`k1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Parameter of underexcitation limit (<i>K1</i>).  Typical value = 0,1364.+++

| <<k2,`k2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Parameter of underexcitation limit (<i>K2</i>).  Typical value = -0,3861.+++

| <<kc,`kc`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++PI controller gain (<i>Kc</i>).  Typical value = 70.+++

| <<kce,`kce`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Rectifier regulation factor (<i>Kce</i>).  Typical value = 0.+++

| <<kd,`kd`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exciter internal reactance (<i>Kd</i>).  Typical value = 0.+++

| <<kgob,`kgob`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++P controller gain (<i>Kgob</i>).  Typical value = 10.+++

| <<kp,`kp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++PI controller gain (<i>Kp</i>).  Typical value = 1.+++

| <<kqi,`kqi`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++PI controller gain of integral component (<i>Kqi</i>).  Typical value = 0.+++

| <<kqob,`kqob`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Rate of rise of the reactive power (<i>Kqob</i>).+++

| <<kqp,`kqp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++PI controller gain (<i>Kqp</i>).  Typical value = 0.+++

| <<nq,`nq`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Deadband of reactive power (<i>nq</i>).  Determines the range of sensitivity.  Typical value = 0,001.+++

| <<qconoff,`qconoff`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Secondary voltage control state (<i>Qc_on_off</i>).
true = secondary voltage control is on
false = secondary voltage control is off.
Typical value = false.+++

| <<qz,`qz`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Desired value (setpoint) of reactive power, manual setting (<i>Qz</i>).+++

| <<remote,`remote`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector to apply automatic calculation in secondary controller model (<i>remote</i>).
true = automatic calculation is activated
false = manual set is active; the use of desired value of reactive power (<i>Qz</i>) is required.
Typical value = true.+++

| <<sbase,`sbase`>>
| 0..1
| xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Apparent power of the unit (<i>Sbase</i>) (&gt; 0).  Unit = MVA.  Typical value = 259.+++

| <<tc,`tc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++PI controller phase lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 8.+++

| <<te,`te`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of gain block (<i>Te</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<ti,`ti`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++PI controller phase lead time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 2.+++

| <<tp,`tp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<tr,`tr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Voltage transducer time constant (<i>Tr</i>) (&gt;= 0).  Typical value = 0,01.+++

| <<uimax,`uimax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum error (<i>UImax</i>) (&gt; ExcSK.uimin).  Typical value = 10.+++

| <<uimin,`uimin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum error (<i>UImin</i>) (&lt; ExcSK.uimax).  Typical value = -10.+++

| <<urmax,`urmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum controller output (<i>URmax</i>) (&gt; ExcSK.urmin).  Typical value = 10.+++

| <<urmin,`urmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum controller output (<i>URmin</i>) (&lt; ExcSK.urmax).  Typical value = -10.+++

| <<vtmax,`vtmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum terminal voltage input (<i>Vtmax</i>) (&gt; ExcSK.vtmin).  Determines the range of voltage deadband.  Typical value = 1,05.+++

| <<vtmin,`vtmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum terminal voltage input (<i>Vtmin</i>) (&lt; ExcSK.vtmax).  Determines the range of voltage deadband.  Typical value = 0,95.+++

| <<yp,`yp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum output (<i>Yp</i>).  Typical value = 1.+++

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#efdmax]
=== `efdmax`
+++Field voltage clipping upper level limit (<i>Efdmax</i>) (&gt; ExcSK.efdmin).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.efdmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#efdmin]
=== `efdmin`
+++Field voltage clipping lower level limit (<i>Efdmin</i>) (&lt; ExcSK.efdmax).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.efdmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#emax]
=== `emax`
+++Maximum field voltage output (<i>Emax</i>) (&gt; ExcSK.emin).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.emax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#emin]
=== `emin`
+++Minimum field voltage output (<i>Emin</i>) (&lt; ExcSK.emax).  Typical value = -20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.emin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#k]
=== `k`
+++Gain (<i>K</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k1]
=== `k1`
+++Parameter of underexcitation limit (<i>K1</i>).  Typical value = 0,1364.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k2]
=== `k2`
+++Parameter of underexcitation limit (<i>K2</i>).  Typical value = -0,3861.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kc]
=== `kc`
+++PI controller gain (<i>Kc</i>).  Typical value = 70.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kce]
=== `kce`
+++Rectifier regulation factor (<i>Kce</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kce`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kd]
=== `kd`
+++Exciter internal reactance (<i>Kd</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kgob]
=== `kgob`
+++P controller gain (<i>Kgob</i>).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kgob`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kp]
=== `kp`
+++PI controller gain (<i>Kp</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kqi]
=== `kqi`
+++PI controller gain of integral component (<i>Kqi</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kqi`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kqob]
=== `kqob`
+++Rate of rise of the reactive power (<i>Kqob</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kqob`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kqp]
=== `kqp`
+++PI controller gain (<i>Kqp</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kqp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#nq]
=== `nq`
+++Deadband of reactive power (<i>nq</i>).  Determines the range of sensitivity.  Typical value = 0,001.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.nq`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qconoff]
=== `qconoff`
+++Secondary voltage control state (<i>Qc_on_off</i>).
true = secondary voltage control is on
false = secondary voltage control is off.
Typical value = false.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.qconoff`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#qz]
=== `qz`
+++Desired value (setpoint) of reactive power, manual setting (<i>Qz</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.qz`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#remote]
=== `remote`
+++Selector to apply automatic calculation in secondary controller model (<i>remote</i>).
true = automatic calculation is activated
false = manual set is active; the use of desired value of reactive power (<i>Qz</i>) is required.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.remote`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#sbase]
=== `sbase`
+++Apparent power of the unit (<i>Sbase</i>) (&gt; 0).  Unit = MVA.  Typical value = 259.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.sbase`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tc]
=== `tc`
+++PI controller phase lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#te]
=== `te`
+++Time constant of gain block (<i>Te</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti]
=== `ti`
+++PI controller phase lead time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.ti`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tp]
=== `tp`
+++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tr]
=== `tr`
+++Voltage transducer time constant (<i>Tr</i>) (&gt;= 0).  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#uimax]
=== `uimax`
+++Maximum error (<i>UImax</i>) (&gt; ExcSK.uimin).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.uimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#uimin]
=== `uimin`
+++Minimum error (<i>UImin</i>) (&lt; ExcSK.uimax).  Typical value = -10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.uimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#urmax]
=== `urmax`
+++Maximum controller output (<i>URmax</i>) (&gt; ExcSK.urmin).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.urmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#urmin]
=== `urmin`
+++Minimum controller output (<i>URmin</i>) (&lt; ExcSK.urmax).  Typical value = -10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.urmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#vtmax]
=== `vtmax`
+++Maximum terminal voltage input (<i>Vtmax</i>) (&gt; ExcSK.vtmin).  Determines the range of voltage deadband.  Typical value = 1,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.vtmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vtmin]
=== `vtmin`
+++Minimum terminal voltage input (<i>Vtmin</i>) (&lt; ExcSK.vtmax).  Determines the range of voltage deadband.  Typical value = 0,95.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.vtmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#yp]
=== `yp`
+++Maximum output (<i>Yp</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.yp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


