v1.1.0/modules/schema/pages/class/ExcSK.adoc
= `ExcSK`
:toclevels: 4


+++Slovakian excitation system.  UEL and secondary voltage control are included in this model. When this model is used, there cannot be a separate underexcitation limiter or VAr controller model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcSK`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcSK`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<efdmax,`efdmax`>>
//| [[slots_table.efdmax]]<<efdmax,`efdmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Field voltage clipping upper level limit (<i>Efdmax</i>) (&gt; ExcSK.efdmin).+++
| _n/a_

| <<efdmin,`efdmin`>>
//| [[slots_table.efdmin]]<<efdmin,`efdmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Field voltage clipping lower level limit (<i>Efdmin</i>) (&lt; ExcSK.efdmax).+++
| _n/a_

| <<emax,`emax`>>
//| [[slots_table.emax]]<<emax,`emax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum field voltage output (<i>Emax</i>) (&gt; ExcSK.emin).  Typical value = 20.+++
| _n/a_

| <<emin,`emin`>>
//| [[slots_table.emin]]<<emin,`emin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum field voltage output (<i>Emin</i>) (&lt; ExcSK.emax).  Typical value = -20.+++
| _n/a_

| <<k,`k`>>
//| [[slots_table.k]]<<k,`k`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain (<i>K</i>).  Typical value = 1.+++
| _n/a_

| <<k1,`k1`>>
//| [[slots_table.k1]]<<k1,`k1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Parameter of underexcitation limit (<i>K1</i>).  Typical value = 0,1364.+++
| _n/a_

| <<k2,`k2`>>
//| [[slots_table.k2]]<<k2,`k2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Parameter of underexcitation limit (<i>K2</i>).  Typical value = -0,3861.+++
| _n/a_

| <<kc,`kc`>>
//| [[slots_table.kc]]<<kc,`kc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PI controller gain (<i>Kc</i>).  Typical value = 70.+++
| _n/a_

| <<kce,`kce`>>
//| [[slots_table.kce]]<<kce,`kce`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Rectifier regulation factor (<i>Kce</i>).  Typical value = 0.+++
| _n/a_

| <<kd,`kd`>>
//| [[slots_table.kd]]<<kd,`kd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exciter internal reactance (<i>Kd</i>).  Typical value = 0.+++
| _n/a_

| <<kgob,`kgob`>>
//| [[slots_table.kgob]]<<kgob,`kgob`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++P controller gain (<i>Kgob</i>).  Typical value = 10.+++
| _n/a_

| <<kp,`kp`>>
//| [[slots_table.kp]]<<kp,`kp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PI controller gain (<i>Kp</i>).  Typical value = 1.+++
| _n/a_

| <<kqi,`kqi`>>
//| [[slots_table.kqi]]<<kqi,`kqi`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PI controller gain of integral component (<i>Kqi</i>).  Typical value = 0.+++
| _n/a_

| <<kqob,`kqob`>>
//| [[slots_table.kqob]]<<kqob,`kqob`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Rate of rise of the reactive power (<i>Kqob</i>).+++
| _n/a_

| <<kqp,`kqp`>>
//| [[slots_table.kqp]]<<kqp,`kqp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PI controller gain (<i>Kqp</i>).  Typical value = 0.+++
| _n/a_

| <<nq,`nq`>>
//| [[slots_table.nq]]<<nq,`nq`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Deadband of reactive power (<i>nq</i>).  Determines the range of sensitivity.  Typical value = 0,001.+++
| _n/a_

| <<qconoff,`qconoff`>>
//| [[slots_table.qconoff]]<<qconoff,`qconoff`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Secondary voltage control state (<i>Qc_on_off</i>).
true = secondary voltage control is on
false = secondary voltage...+++
| _n/a_

| <<qz,`qz`>>
//| [[slots_table.qz]]<<qz,`qz`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Desired value (setpoint) of reactive power, manual setting (<i>Qz</i>).+++
| _n/a_

| <<remote,`remote`>>
//| [[slots_table.remote]]<<remote,`remote`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Selector to apply automatic calculation in secondary controller model (<i>remote</i>).
true = automatic calculation is...+++
| _n/a_

| <<sbase,`sbase`>>
//| [[slots_table.sbase]]<<sbase,`sbase`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Apparent power of the unit (<i>Sbase</i>) (&gt; 0).  Unit = MVA.  Typical value = 259.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++PI controller phase lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 8.+++
| _n/a_

| <<te,`te`>>
//| [[slots_table.te]]<<te,`te`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of gain block (<i>Te</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<ti,`ti`>>
//| [[slots_table.ti]]<<ti,`ti`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++PI controller phase lead time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 2.+++
| _n/a_

| <<tp,`tp`>>
//| [[slots_table.tp]]<<tp,`tp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<tr,`tr`>>
//| [[slots_table.tr]]<<tr,`tr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Voltage transducer time constant (<i>Tr</i>) (&gt;= 0).  Typical value = 0,01.+++
| _n/a_

| <<uimax,`uimax`>>
//| [[slots_table.uimax]]<<uimax,`uimax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum error (<i>UImax</i>) (&gt; ExcSK.uimin).  Typical value = 10.+++
| _n/a_

| <<uimin,`uimin`>>
//| [[slots_table.uimin]]<<uimin,`uimin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum error (<i>UImin</i>) (&lt; ExcSK.uimax).  Typical value = -10.+++
| _n/a_

| <<urmax,`urmax`>>
//| [[slots_table.urmax]]<<urmax,`urmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum controller output (<i>URmax</i>) (&gt; ExcSK.urmin).  Typical value = 10.+++
| _n/a_

| <<urmin,`urmin`>>
//| [[slots_table.urmin]]<<urmin,`urmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum controller output (<i>URmin</i>) (&lt; ExcSK.urmax).  Typical value = -10.+++
| _n/a_

| <<vtmax,`vtmax`>>
//| [[slots_table.vtmax]]<<vtmax,`vtmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum terminal voltage input (<i>Vtmax</i>) (&gt; ExcSK.vtmin).  Determines the range of voltage deadband.  Typical value = 1,05.+++
| _n/a_

| <<vtmin,`vtmin`>>
//| [[slots_table.vtmin]]<<vtmin,`vtmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum terminal voltage input (<i>Vtmin</i>) (&lt; ExcSK.vtmax).  Determines the range of voltage deadband.  Typical value = 0,95.+++
| _n/a_

| <<yp,`yp`>>
//| [[slots_table.yp]]<<yp,`yp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum output (<i>Yp</i>).  Typical value = 1.+++
| _n/a_

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
//| [[slots_table.DiscontinuousExcitationControlDynamics]]<<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1 +
xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
//| [[slots_table.OverexcitationLimiterDynamics]]<<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1 +
xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
//| [[slots_table.PFVArControllerType1Dynamics]]<<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
//| [[slots_table.PFVArControllerType2Dynamics]]<<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
//| [[slots_table.PowerSystemStabilizerDynamics]]<<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1 +
xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
//| [[slots_table.UnderexcitationLimiterDynamics]]<<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1 +
xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
//| [[slots_table.VoltageCompensatorDynamics]]<<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1 +
xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.DiscontinuousExcitationControlDynamics,&#10548;>>
--
////


//[discrete]
[#efdmax]
=== `efdmax`
+++Field voltage clipping upper level limit (<i>Efdmax</i>) (&gt; ExcSK.efdmin).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.efdmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.efdmax,&#10548;>>
--
////


//[discrete]
[#efdmin]
=== `efdmin`
+++Field voltage clipping lower level limit (<i>Efdmin</i>) (&lt; ExcSK.efdmax).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.efdmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.efdmin,&#10548;>>
--
////


//[discrete]
[#emax]
=== `emax`
+++Maximum field voltage output (<i>Emax</i>) (&gt; ExcSK.emin).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.emax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.emax,&#10548;>>
--
////


//[discrete]
[#emin]
=== `emin`
+++Minimum field voltage output (<i>Emin</i>) (&lt; ExcSK.emax).  Typical value = -20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.emin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.emin,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k]
=== `k`
+++Gain (<i>K</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.k`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k,&#10548;>>
--
////


//[discrete]
[#k1]
=== `k1`
+++Parameter of underexcitation limit (<i>K1</i>).  Typical value = 0,1364.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.k1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k1,&#10548;>>
--
////


//[discrete]
[#k2]
=== `k2`
+++Parameter of underexcitation limit (<i>K2</i>).  Typical value = -0,3861.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.k2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k2,&#10548;>>
--
////


//[discrete]
[#kc]
=== `kc`
+++PI controller gain (<i>Kc</i>).  Typical value = 70.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kc,&#10548;>>
--
////


//[discrete]
[#kce]
=== `kce`
+++Rectifier regulation factor (<i>Kce</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kce`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kce,&#10548;>>
--
////


//[discrete]
[#kd]
=== `kd`
+++Exciter internal reactance (<i>Kd</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kd,&#10548;>>
--
////


//[discrete]
[#kgob]
=== `kgob`
+++P controller gain (<i>Kgob</i>).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kgob`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kgob,&#10548;>>
--
////


//[discrete]
[#kp]
=== `kp`
+++PI controller gain (<i>Kp</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kp,&#10548;>>
--
////


//[discrete]
[#kqi]
=== `kqi`
+++PI controller gain of integral component (<i>Kqi</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kqi`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kqi,&#10548;>>
--
////


//[discrete]
[#kqob]
=== `kqob`
+++Rate of rise of the reactive power (<i>Kqob</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kqob`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kqob,&#10548;>>
--
////


//[discrete]
[#kqp]
=== `kqp`
+++PI controller gain (<i>Kqp</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.kqp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kqp,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#nq]
=== `nq`
+++Deadband of reactive power (<i>nq</i>).  Determines the range of sensitivity.  Typical value = 0,001.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.nq`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.nq,&#10548;>>
--
////


//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.OverexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType1Dynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType2Dynamics,&#10548;>>
--
////


//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemStabilizerDynamics,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#qconoff]
=== `qconoff`
+++Secondary voltage control state (<i>Qc_on_off</i>).
true = secondary voltage control is on
false = secondary voltage control is off.
Typical value = false.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.qconoff`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.qconoff,&#10548;>>
--
////


//[discrete]
[#qz]
=== `qz`
+++Desired value (setpoint) of reactive power, manual setting (<i>Qz</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.qz`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.qz,&#10548;>>
--
////


//[discrete]
[#remote]
=== `remote`
+++Selector to apply automatic calculation in secondary controller model (<i>remote</i>).
true = automatic calculation is activated
false = manual set is active; the use of desired value of reactive power (<i>Qz</i>) is required.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.remote`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.remote,&#10548;>>
--
////


//[discrete]
[#sbase]
=== `sbase`
+++Apparent power of the unit (<i>Sbase</i>) (&gt; 0).  Unit = MVA.  Typical value = 259.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.sbase`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

////
[.text-left]
--
<<slots_table.sbase,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++PI controller phase lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#te]
=== `te`
+++Time constant of gain block (<i>Te</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.te,&#10548;>>
--
////


//[discrete]
[#ti]
=== `ti`
+++PI controller phase lead time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.ti`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti,&#10548;>>
--
////


//[discrete]
[#tp]
=== `tp`
+++Time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tp,&#10548;>>
--
////


//[discrete]
[#tr]
=== `tr`
+++Voltage transducer time constant (<i>Tr</i>) (&gt;= 0).  Typical value = 0,01.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tr,&#10548;>>
--
////


//[discrete]
[#uimax]
=== `uimax`
+++Maximum error (<i>UImax</i>) (&gt; ExcSK.uimin).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.uimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.uimax,&#10548;>>
--
////


//[discrete]
[#uimin]
=== `uimin`
+++Minimum error (<i>UImin</i>) (&lt; ExcSK.uimax).  Typical value = -10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.uimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.uimin,&#10548;>>
--
////


//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.UnderexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#urmax]
=== `urmax`
+++Maximum controller output (<i>URmax</i>) (&gt; ExcSK.urmin).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.urmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.urmax,&#10548;>>
--
////


//[discrete]
[#urmin]
=== `urmin`
+++Minimum controller output (<i>URmin</i>) (&lt; ExcSK.urmax).  Typical value = -10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.urmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.urmin,&#10548;>>
--
////


//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageCompensatorDynamics,&#10548;>>
--
////


//[discrete]
[#vtmax]
=== `vtmax`
+++Maximum terminal voltage input (<i>Vtmax</i>) (&gt; ExcSK.vtmin).  Determines the range of voltage deadband.  Typical value = 1,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.vtmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vtmax,&#10548;>>
--
////


//[discrete]
[#vtmin]
=== `vtmin`
+++Minimum terminal voltage input (<i>Vtmin</i>) (&lt; ExcSK.vtmax).  Determines the range of voltage deadband.  Typical value = 0,95.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.vtmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vtmin,&#10548;>>
--
////


//[discrete]
[#yp]
=== `yp`
+++Maximum output (<i>Yp</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcSK.yp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.yp,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
